# rsbts

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: cli.rs  config.rs  db.rs  import.rs  lib.rs  main.rs  migrations.rs  musicbrainz.rs  pathformat.rs  query.rs  tags.rs
src/migrations/: 001_initial.sql
